STM32F103C8T6(BluePill)/LABS/.metadata/.plugins/org.eclipse.cdt.ui/05-STK.build.log
01:22:22 **** Incremental Build of configuration Debug for project 05-STK ****
make -j8 all 
arm-none-eabi-gcc "../Src/GPIO_program.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C8Tx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/GPIO_program.d" -MT"Src/GPIO_program.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/GPIO_program.o"
../Src/GPIO_program.c: In function 'GPIO_voidEnableClock':
../Src/GPIO_program.c:30:109: error: 'RCC_APB2_IOPARST' undeclared (first use in this function); did you mean 'RCC_APB2_USART1'?
   30 |                                 case GPIOA      :               RCC_voidEnableClockPeripheral(RCC_BUS_APB2, RCC_APB2_IOPARST);          break;  // activate the RCC for GPIOA
      |                                                                                                             ^~~~~~~~~~~~~~~~
      |                                                                                                             RCC_APB2_USART1
../Src/GPIO_program.c:30:109: note: each undeclared identifier is reported only once for each function it appears in
../Src/GPIO_program.c:31:109: error: 'RCC_APB2_IOPBRST' undeclared (first use in this function); did you mean 'RCC_APB2_SPI1'?
   31 |                                 case GPIOB      :               RCC_voidEnableClockPeripheral(RCC_BUS_APB2, RCC_APB2_IOPBRST);          break;  // activate the RCC for GPIOB
      |                                                                                                             ^~~~~~~~~~~~~~~~
      |                                                                                                             RCC_APB2_SPI1
../Src/GPIO_program.c:32:109: error: 'RCC_APB2_IOPCRST' undeclared (first use in this function); did you mean 'RCC_APB2_SPI1'?
   32 |                                 case GPIOC      :               RCC_voidEnableClockPeripheral(RCC_BUS_APB2, RCC_APB2_IOPCRST);          break;  // activate the RCC for GPIOC
      |                                                                                                             ^~~~~~~~~~~~~~~~
      |                                                                                                             RCC_APB2_SPI1
make: *** [Src/subdir.mk:34: Src/GPIO_program.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

01:22:23 Build Failed. 4 errors, 0 warnings. (took 704ms)

